--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  dio: ^5.1.1
+  shared_preferences: ^2.0.17
+  cached_network_image: ^3.2.0
+  fluttertoast: ^8.2.1
+  shimmer: ^2.0.0
+  intl: ^0.18.0
+  image_picker: ^0.8.6+1
 
 dev_dependencies:
   flutter_test:
